# BaseParameter

./: base_parameter.py
data/: 1poly.txt  2poly.txt  3307-AK.txt  3307.TXT  4470-AK.txt  4470.TXT
lib/: CMakeLists.txt
lib/include/: suffix_tree.h
lib/src/: bindings.cpp  suffix_tree.cpp
